[workspace]
resolver = "2"

members = [
    "conspiracy",
    "conspiracy_macros",
    "conspiracy_theories",
]

[workspace.dependencies]
conspiracy_macros = { path = "conspiracy_macros", version = "0.2.0" }
conspiracy_theories = { path = "conspiracy_theories", version = "0.2.0" }
convert_case = "0.7.1"
proc-macro2 = "1.0.93"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_with = "3.12.0"
serde_json = "1.0.3"
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
thiserror = "2.0.11"
