[package]
name = "conspiracy"
description = "Safe, efficient configuration abstractions"
version = "0.2.0"
edition = "2021"
authors = ["Chris Henk <Chris.Henk@unobtainium.software>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LittleBoxOfSunshine/conspiracy"
readme = "README.md"
keywords = ["config", "configuration"]

[dependencies]
conspiracy_macros.workspace = true
conspiracy_theories.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
