[package]
name = "conspiracy_theories"
description = "Traits used by conspiracy and conspiracy_macros crates"
version = "0.1.0"
edition = "2021"
authors = ["Chris Henk <Chris.Henk@unobtainium.software>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LittleBoxOfSunshine/conspiracy"
readme = "conspiracy/README.md"
keywords = ["config", "configuration"]
